style.css
html {
    font-size: 14px;
    font-family: 'Menlo', sans-serif;
}

h1 {
    font-size: 40px;
    padding-left: 20px;
    color: #FFFFFF;
}

h2 {
    font-size: 20px;
    padding-left: 20px;
    color: #5C6C8F;
}

p, li {
    font-size: 16px;
    line-height: 20px;
    padding-left: 40px;
    padding-right: 40px;
    color: #1D509D;
}

p.column {
    font-size: 18px;
    font-family: 'Geneva', sans-serif;
    font-style: italic;
    padding-left: 12px;
    padding-right: 12px;
    color: #5C6C8F;
}

.rectangle {
    height: 165px;
    background-color: #121476;
}

.column.image {
    width: 66.66%;
}

.column.text {
    width: 33.33%;
    text-align: center;
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

/* Add a black background color to the top navigation */
.topnav {
    background-color: #D6DAE5;
    overflow: hidden;
    position: relative;
    top: 0;
    width: 100%;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: left;
    display: block;
    color: #5C6C8F;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
    background-color: #FFFFFF;
    color: #121476;
}

/* Add an active class to highlight the current page */
.topnav a.active {
    background-color: #121476;
    color: #FFFFFF;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
    display: none;
}

/* When the screen is less than 780 pixels wide, hide all links, except for the
first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 780px) {
    .topnav {position: relative;}
    .topnav a:not(a.active, a.icon) {display: none;}
    .topnav .icon {
        float: right;
        display: block;
    }

    .column.image, .column.text {
        width: 100%;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user
clicks on the icon. This class makes the topnav look good on small screens
(display the links vertically instead of horizontally) */
@media screen and (max-width: 780px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .topnav.responsive a:not(a.active) {
        float: none;
        display: block;
        text-align: left;
    }
    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}

